noteous preview 1.9.2 Fix write-button-add text overlap

--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ a {
 .write-buttons {
   color: var(--base-text);
   background: var(--base-buttons);
-  padding: 1.5rem 1.8rem;
+  padding: 0.8rem 1.8rem;
 
   border-style: none;
   border-radius: 1.3rem;
@@ -497,7 +497,7 @@ a {
   font-size: 1.4rem;
   font-weight: 700;
 
-  line-height: 0px;
+  line-height: 1;
 
   transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
   -webkit-user-select: none;
